--- a/MyLibrary/build.gradle
+++ b/MyLibrary/build.gradle
@@ -25,6 +25,14 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+        publishing {
+            singleVariant("release") {
+                // if you don't want sources/javadoc, remove these lines
+                withSourcesJar()
+                withJavadocJar()
+            }
+        }
 }
 
 dependencies {
@@ -35,12 +43,28 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
-publishing {
-    publications {
-        release(MavenPublication) {
-            groupId = 'com.github.usamaahmadit8'
-            artifactId = 'MyLibrary'
-            version = '1.0'
+//publishing {
+//    publications {
+//        release(MavenPublication) {
+//            groupId = 'com.github.usamaahmadit8'
+//            artifactId = 'MyLibrary'
+//            version = '1.0'
+//
+//            afterEvaluate {
+//                from components.release
+//            }
+//        }
+//    }
+//}
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId = 'com.github.usamaahmadit8'
+                artifactId = 'MyLibrary'
+                version = '1.0'
+            }
         }
     }
 }
