--- a/MyLibrary/build.gradle
+++ b/MyLibrary/build.gradle
@@ -60,7 +60,7 @@ afterEvaluate {
     publishing {
         publications {
             release(MavenPublication) {
-                from components.release
+                from(components["release"])
                 groupId = 'com.github.usamaahmadit8'
                 artifactId = 'MyLibrary'
                 version = '1.0'
