--- a/MyLibrary/build.gradle
+++ b/MyLibrary/build.gradle
@@ -26,13 +26,18 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-        publishing {
-            singleVariant("release") {
-                // if you don't want sources/javadoc, remove these lines
-                withSourcesJar()
-                withJavadocJar()
-            }
+    publishing {
+        singleVariant("release") {
+            withSourcesJar()
+            withJavadocJar()
         }
+
+        multipleVariants {
+            withSourcesJar()
+            withJavadocJar()
+            allVariants()
+        }
+    }
 }
 
 dependencies {
@@ -60,7 +65,7 @@ afterEvaluate {
     publishing {
         publications {
             release(MavenPublication) {
-                from(components["release"])
+                from components.release
                 groupId = 'com.github.usamaahmadit8'
                 artifactId = 'MyLibrary'
                 version = '1.0'
