--- a/MyLibrary/build.gradle
+++ b/MyLibrary/build.gradle
@@ -56,7 +56,7 @@ publishing {
             version = '1.0'
 
             afterEvaluate {
-                from components.release
+                from components.getByName('release')
             }
         }
     }
