--- a/MyLibrary/build.gradle
+++ b/MyLibrary/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.android.library'
-    id 'maven-publish'
+    id "io.github.pedro-bachiega.sonatype-maven-publish" version "0.0.3"
 }
 
 android {
