--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,9 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
+        maven {
+            url 'https://dl.google.com/dl/android/maven2'
+        }
     }
 }
 rootProject.name = "MyLibrary"
