--- a/MyLibrary/build.gradle
+++ b/MyLibrary/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.android.library'
-    id "io.github.pedro-bachiega.sonatype-maven-publish" version "0.0.3"
+    id 'maven-publish'
 }
 
 android {
@@ -24,6 +24,16 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
+    }
+
+    buildFeatures {
+        compose true
+    }
+
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
     }
 
     publishing {
@@ -63,7 +73,7 @@ dependencies {
 //}
 
 
-apply plugin: 'maven-publish'
+
 
 afterEvaluate {
     publishing {
@@ -72,7 +82,7 @@ afterEvaluate {
             release(MavenPublication) {
                 from components.release
                 groupId = 'com.github.usamaahmadit8'
-                artifactId = 'MyLibrary'
+                artifactId = 'MyLibraryusama'
                 version = '1.1'
             }
         }
